# ash-rt

./: .gitignore  Cargo.toml  README.md  SPV_KHR_ray_tracing.html  build.rs  todo.md
assets/: dungeon.glb
rt/: Cargo.toml  build.rs
rt/src/: acceleration_structure.rs  base.rs  custom_as.rs  main.rs  utils.rs
shaders/: Cargo.toml  common.glsl  compile.bat  rt.rchit  rt.rgen  rt.rint  rt.rmiss
shaders/AO/: ao.rgen  ao.rmiss  ao_common.glsl  ao_pass.rchit  compile.bat  filter.frag.glsl  filter.vert.glsl  main_pass.rchit
shaders/src/: lib.rs
src/: base.rs  main.rs  player_controller.rs  random_generation.rs  uniform_types.rs  utils.rs  vk_controller.rs  voxels.rs  vulkano_rewrite.rs
src/io/: vox.rs
src/render/: pass.rs
