[package]
name = "ash-rt"
version = "0.1.0"
edition = "2021"

[dependencies]
ash = { version = "0.38", default-features = false, features = [
    "linked",
    "debug",
] }
ash-window = "0.13"
winit = { version = "0.30.0" }
png = "0.17"
image = "0.25"
raw-window-handle = "0.6"
anyhow = "1.0.82"
bytemuck = { version = "1.15.0", features = ["derive"] }
nalgebra-glm = { version = "0.18.0", features = ["convert-bytemuck"] }
bevy_transform = "0.13.2"
bevy_math = "0.13.2"
