[package]
name = "ash-rt"
version = "0.1.0"
edition = "2021"

[dependencies]
ash = { version = "0.38", default-features = false, features = [
    "linked",
    "debug",
] }
ash-window = "0.13"
winit = { version = "0.30" }
raw-window-handle = "0.6"
anyhow = "1.0"
bytemuck = { version = "1.16", features = ["derive"] }
nalgebra-glm = { version = "0.19.0", features = ["convert-bytemuck"] }
bevy_transform = "0.14"
bevy_math = "0.14"
rand = "0.8"
dot_vox = "5.1.1"

[profile.dev]
opt-level = 3
