[package]
name = "ash-rt"
version = "0.1.0"
edition = "2021"

[dependencies]
ash = { version = "0.38.0", default-features = false, features = [
    "linked",
    "debug",
] }
ash-window = "0.13.0"
winit = { version = "0.30.5" }
raw-window-handle = "0.6.2"
anyhow = "1.0.86"
bytemuck = { version = "1.17.1", features = ["derive"] }
nalgebra-glm = { version = "0.19.0", features = ["convert-bytemuck"] }
bevy_transform = "0.14.1"
bevy_math = "0.14.1"
rand = "0.8.5"
dot_vox = "5.1.1"

[profile.dev]
opt-level = 3
