[package]
name = "ash-rt"
version = "0.1.0"
edition = "2021"

[dependencies]
ash = { version = "0.38", default-features = false, features = [
    "linked",
    "debug",
] }
ash-window = "0.13"
winit = { version = "0.29" }
png = "0.17"
image = "0.24"
raw-window-handle = "0.6"

[build-dependencies]
spirv-builder = "0.9"
